--- a/Web/SendGridTest/packages.config
+++ b/Web/SendGridTest/packages.config
@@ -2,6 +2,6 @@
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="Sendgrid" version="8.0.5" targetFramework="net45" />
-  <package id="SendGrid.CSharp.HTTP.Client" version="3.0.0" targetFramework="net45" />
+  <package id="Sendgrid" version="9.12.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
 </packages>
