--- a/Web/WebJobs/Altech.WebJobs.OrderProcessing/packages.config
+++ b/Web/WebJobs/Altech.WebJobs.OrderProcessing/packages.config
@@ -10,8 +10,8 @@
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="Sendgrid" version="8.0.5" targetFramework="net45" />
-  <package id="SendGrid.CSharp.HTTP.Client" version="3.0.0" targetFramework="net45" />
+  <package id="Sendgrid" version="9.12.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="4.0.1" targetFramework="net45" />
 </packages>
