Trying to solve Cyrillic encoding issue in Delphi forms (Main), also added new form About.

--- a/Desktop/agProject.cfg
+++ b/Desktop/agProject.cfg
@@ -31,7 +31,7 @@
 -M
 -$M16384,1048576
 -K$00400000
--E"C:\Users\juryger\Dropbox\AG\AgLight"
+-E"c:\temp"
 -LE"c:\program files (x86)\borland\delphi7\Projects\Bpl"
 -LN"c:\program files (x86)\borland\delphi7\Projects\Bpl"
 -U"c:\program files (x86)\borland\delphi7\Source\EHLIB\Common;c:\program files (x86)\borland\delphi7\Source\EHLIB\Delphi5;c:\program files (x86)\borland\delphi7\Source\frp\source;C:\Program Files\Borland\Delphi7\Controls\EHLIB\DataService;C:\Program Files (x86)\Borland\Delphi7\3rdpc\EHLIB\Common;C:\Program Files (x86)\Borland\Delphi7\3rdpc\EHLIB\DataService"
