--- a/Web/AltechWebSite.Tests/packages.config
+++ b/Web/AltechWebSite.Tests/packages.config
@@ -7,4 +7,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="NSubstitute" version="1.8.1.0" targetFramework="net45" />
+  <package id="NUnit" version="3.12.0" targetFramework="net45" />
 </packages>
