--- a/Web/WebJobs/Altech.WebJobs.OrderProcessing/Altech.WebJobs.OrderProcessing.csproj
+++ b/Web/WebJobs/Altech.WebJobs.OrderProcessing/Altech.WebJobs.OrderProcessing.csproj
@@ -125,6 +125,7 @@
     <None Include="App.config.sample" />
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\altech - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\altech.pubxml">
       <SubType>Designer</SubType>
     </None>
