Introduced new column - PackMin at database and UI. Web site updated to display only Normal Price and Whole Sale Price. Price list also update - Whole Sale 3 price column hided.

--- a/Desktop/agProject.cfg
+++ b/Desktop/agProject.cfg
@@ -31,10 +31,10 @@
 -M
 -$M16384,1048576
 -K$00400000
--E"c:\temp"
+-E"c:\temp\AG"
 -LE"c:\program files (x86)\borland\delphi7\Projects\Bpl"
 -LN"c:\program files (x86)\borland\delphi7\Projects\Bpl"
--U"c:\program files (x86)\borland\delphi7\Source\EHLIB\Common;c:\program files (x86)\borland\delphi7\Source\EHLIB\Delphi5;c:\program files (x86)\borland\delphi7\Source\frp\source;C:\Program Files\Borland\Delphi7\Controls\EHLIB\DataService;C:\Program Files (x86)\Borland\Delphi7\3rdpc\EHLIB\Common;C:\Program Files (x86)\Borland\Delphi7\3rdpc\EHLIB\DataService"
--O"c:\program files (x86)\borland\delphi7\Source\EHLIB\Common;c:\program files (x86)\borland\delphi7\Source\EHLIB\Delphi5;c:\program files (x86)\borland\delphi7\Source\frp\source;C:\Program Files\Borland\Delphi7\Controls\EHLIB\DataService;C:\Program Files (x86)\Borland\Delphi7\3rdpc\EHLIB\Common;C:\Program Files (x86)\Borland\Delphi7\3rdpc\EHLIB\DataService"
--I"c:\program files (x86)\borland\delphi7\Source\EHLIB\Common;c:\program files (x86)\borland\delphi7\Source\EHLIB\Delphi5;c:\program files (x86)\borland\delphi7\Source\frp\source;C:\Program Files\Borland\Delphi7\Controls\EHLIB\DataService;C:\Program Files (x86)\Borland\Delphi7\3rdpc\EHLIB\Common;C:\Program Files (x86)\Borland\Delphi7\3rdpc\EHLIB\DataService"
--R"c:\program files (x86)\borland\delphi7\Source\EHLIB\Common;c:\program files (x86)\borland\delphi7\Source\EHLIB\Delphi5;c:\program files (x86)\borland\delphi7\Source\frp\source;C:\Program Files\Borland\Delphi7\Controls\EHLIB\DataService;C:\Program Files (x86)\Borland\Delphi7\3rdpc\EHLIB\Common;C:\Program Files (x86)\Borland\Delphi7\3rdpc\EHLIB\DataService"
+-U"C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\Common;C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\DataService;C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\Delphi7;C:\Program Files (x86)\Borland\Delphi7\Projects\FR240;C:\Program Files (x86)\Borland\Delphi7\Projects\TXLSFile"
+-O"C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\Common;C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\DataService;C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\Delphi7;C:\Program Files (x86)\Borland\Delphi7\Projects\FR240;C:\Program Files (x86)\Borland\Delphi7\Projects\TXLSFile"
+-I"C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\Common;C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\DataService;C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\Delphi7;C:\Program Files (x86)\Borland\Delphi7\Projects\FR240;C:\Program Files (x86)\Borland\Delphi7\Projects\TXLSFile"
+-R"C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\Common;C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\DataService;C:\Program Files (x86)\Borland\Delphi7\Projects\EHLib26\Delphi7;C:\Program Files (x86)\Borland\Delphi7\Projects\FR240;C:\Program Files (x86)\Borland\Delphi7\Projects\TXLSFile"
