--- a/Web/AltechWebSite/Web.Release.config.sample
+++ b/Web/AltechWebSite/Web.Release.config.sample
@@ -17,7 +17,7 @@
   <connectionStrings>
     <!--Azure DB-->
     <add name="AltechConnection" 
-         connectionString="Data Source=tcp:tsijdumbin.database.windows.net,1433;Initial Catalog=altechAFv4k27dEo;User Id=juryger@tsijdumbin;Password=;MultipleActiveResultSets=true;" 
+         connectionString="" 
          providerName="System.Data.SqlClient"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>  
