--- a/Web/Tools/Altech.Data.Tools/App.config.sample
+++ b/Web/Tools/Altech.Data.Tools/App.config.sample
@@ -8,7 +8,7 @@
     <!--localDB-->
     <!--<add name="AltechConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=AltechDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
     <!--Azure DB-->
-    <add name="AltechConnection" connectionString="Data Source=tcp:tsijdumbin.database.windows.net,1433;Initial Catalog=altechAFv4k27dEo;User Id=juryger@tsijdumbin;Password=;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="AltechConnection" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <!--<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
