--- a/Web/WebJobs/Altech.WebJobs.DataUploader/App.config.sample
+++ b/Web/WebJobs/Altech.WebJobs.DataUploader/App.config.sample
@@ -11,7 +11,7 @@
     <!--localDB-->
     <!--<add name="AltechConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=AltechDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
     <!--Azure DB-->
-    <add name="AltechConnection" connectionString="Data Source=tcp:tsijdumbin.database.windows.net,1433;Initial Catalog=altechAFv4k27dEo;User Id=juryger@tsijdumbin;Password=;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
+    <add name="AltechConnection" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
