--- a/Web/WebJobs/Altech.WebJobs.OrderProcessing/App.config.sample
+++ b/Web/WebJobs/Altech.WebJobs.OrderProcessing/App.config.sample
@@ -11,6 +11,7 @@
     <add name="AzureWebJobsDashboard" connectionString="DefaultEndpointsProtocol=https;AccountName=altechstorage;AccountKey="/>
     <add name="AzureWebJobsStorage" connectionString="DefaultEndpointsProtocol=https;AccountName=altechstorage;AccountKey="/>
     <add name="StorageConnection" connectionString="DefaultEndpointsProtocol=https;AccountName=altechstorage;AccountKey="/>
+    <add name="AltechConnection" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
