--- a/Web/AltechWebSite/Altech.WebSite.csproj
+++ b/Web/AltechWebSite/Altech.WebSite.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Altech.WebSite</RootNamespace>
     <AssemblyName>Altech.WebSite</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -234,8 +234,9 @@
     <Content Include="fonts\rouble-webfont.eot" />
     <Content Include="fonts\rouble-webfont.ttf" />
     <Content Include="fonts\rouble-webfont.woff" />
+    <None Include="Properties\PublishProfiles\altech - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\altech - ReadOnly - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\altech - Web Deploy.pubxml" />
-    <Content Include="Properties\PublishProfiles\altech.PublishSettings" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
