--- a/Web/WebJobs/Altech.WebJobs.OrderProcessing/packages.config
+++ b/Web/WebJobs/Altech.WebJobs.OrderProcessing/packages.config
@@ -11,7 +11,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Sendgrid" version="9.12.0" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="4.0.1" targetFramework="net45" />
 </packages>
